--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ disqus:
 #################################### global configure #######################################
 
 username: zhoupIT
-baseurl: /StrayBirds
+baseurl: /blog
 markdown: redcarpet
 safe: false
 highlighter: pygments
