--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ safe: false
 highlighter: pygments
 title: IDeventer
 description: 学习的路上
-theme: hack
+theme: time-machine
 disqusname: zhoupIT
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
